# msgpack-rust

rmp/: Cargo.toml
rmp-serde/: Cargo.toml
rmp-serde/src/: config.rs  decode.rs  encode.rs  lib.rs
rmp-serde/tests/: decode.rs  decode_derive.rs  encode_derive.rs  round.rs
rmp/src/: lib.rs
rmp/src/encode/: buffer.rs  mod.rs
rmpv/src/ext/: de.rs
